Coverted Web projects into table format.

--- a/webdev.html
+++ b/webdev.html
@@ -17,33 +17,41 @@
     <hr>
     </header>
     <body>
-        <dl>
-            <dt><strong><H3>Web Dev Projects:</H3></strong></dt>
-            <br>
-            <center>
-            <dd><img src="./src/images/Dashrepo.jpeg" alt="Dashrepo" width="120" height="120"></dd>
-            <dd><a href="https://dashrepo.com"><em><strong>My Main Website:</strong></em></a> Dashrepo combines my newsletter and Blog. I built it with Ghost CMS and has automated newsltters and Paid Memberships</dd>
-            <br>
-            <br>
-            <br>
-            <dd><img src="./src/images/git-GB.png" alt="Dashrepo" width="120" height="120"></dd>
-            <dd><a href="https://git-GB.github.io"><em><strong>GitHub-Jekyll Portfolio Site:</strong></em></a> This is my portfolio site and also the first website that i built with SSG. I used Jekyll to buld the site and GitHub Pages to host it.</dd>   
-            <br>
-            <br>
-            <br>
-            <dd><img src="./src/images/Blufeed.png" alt="Dashrepo" width="120" height="120"></dd>
-            <dd><a href="https://blufeed.substack.com"><strong><em>Newsletter:</em></strong></a> Blu Feed is a newsltter that I created on substack. The Blufeed brings monthly updates, Tools, and Resources related to Data Science, Web Development, and Digital Marketing.</dd>
-            <br>
-            <br>
-            <br>
-            <dd><img src="./src/images/medium-icon.png" alt="Dashrepo" width="120" height="120"></dd>
-            <dd><a href="https://govindbhat.medium.com"><strong><em>My Medium blog:</em></strong></a>On Medium I write mainly about Data science, Web Dev Hacks and Productivity.</dd>
-            <br>
-            <br>
-            <br>
-            <br>
-            </center>
-        </dl>
+        <H3><strong>Web Dev Projects:</strong></H3>
+        <table>
+            <tr>
+                <td>
+                    <img src="./src/images/Blufeed.png" alt="Blufeed" width="120" height="120">
+                </td>
+                <td>
+                    <a href="https://blufeed.substack.com"><strong><em>Newsletter:</em></strong></a> Blu Feed is a newsltter that I created on substack. The Blufeed brings monthly updates, Tools, and Resources related to Data Science, Web Development, and Digital Marketing.
+                </td>   
+            </tr>
+            <tr>
+                <td>
+                    <img src="./src/images/Dashrepo.jpeg" alt="Dashrepo" width="120" height="120">
+                </td>
+                <td>
+                    <a href="https://dashrepo.com"><em><strong>My Main Website:</strong></em></a> Dashrepo combines my newsletter and Blog. I built it with Ghost CMS and has automated newsltters and Paid Memberships.
+                </td>
+            </tr>
+            <>
+                <td>
+                    <img src="./src/images/git-GB.png" alt="git-GB" width="120" height="120">
+                </td>
+                <td>
+                    <a href="https://git-GB.github.io"><em><strong>GitHub-Jekyll Portfolio Site:</strong></em></a> This is my portfolio site and also the first website that i built with SSG. I used Jekyll to buld the site and GitHub Pages to host it.
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="./src/images/medium-icon.png" alt="medium-icon" width="120" height="120">
+                </td>
+                <td>
+                    <a href="https://govindbhat.medium.com"><strong><em>My Medium blog:</em></strong></a>On Medium I write mainly about Data science, Web Dev Hacks and Productivity.
+                </td>
+            </tr>
+        </table>
     </body>
 
     <footer>
