--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head style="background-color: #6C00FF">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website!</title>
-    <header>
+    <header style="color: #ff5a5a">
         <center>
-        <nav>
-            <a href="./index.html">Home</a> |
+        <nav style="color:beige">
+            <a href="./index.html" >Home</a> |
             <a href="./webdev.html">Web Dev Projects</a> |
             <a href="./datascience.html">Data Science Projects</a> |
             <a href="./contact-me.html">Contact Me</a>
@@ -19,10 +19,12 @@
 </head>
 
 
-<body>
+<body style="background-color: #F2F2F2">
     <table cellspacing="20">
         <tr>
-            <td><img src="./src/images/git-GB.png"></td>
+            <td>
+                <img src="./src/images/git-GB.png">
+            </td>
             <td>
                  <h1>Govind Bhat</h1>
                 <p><strong>Mail:</strong>govindsbhat@outlook.com<a href="govindsbhat@outlook.com"></a> |
@@ -32,30 +34,41 @@
             </td>
         </tr>
     </table>
-
-    <center><p>Hi, I am Govind Bhat. I am a Data Scientist and Web Developer. I am also the founder of Dashrepo. I am passionate about Data Science, Web Development, and Digital Marketing. Just started working with Open Source projects and I love talking about Open Source projects in my Blog. I am also a big fan of Productivity and I love to share my productivity hacks on my blog and newsletter.</p></center>
-
-    <table border="1">
-        <thead>
+    <center>
+        <table>
             <tr>
-                <th>Education</th>
-                <th>University</th>
-                <th>Year</th>
+                <td></td>
+                <td><p>Hi, I am Govind Bhat. I am a Data Scientist and Web Developer. I am also the founder of Dashrepo. I am passionate about Data Science, Web Development, and Digital Marketing. Just started working with Open Source projects and I love talking about Open Source projects in my Blog. I am also a big fan of Productivity and I love to share my productivity hacks on my blog and newsletter.</p></center>    </td>
+                <td> </td>
             </tr>
-        </thead>
-        <tr>
-            <td>Hult International Business School</td>
-            <td>Master of Science in Data Analytics</td>
-            <td>June 2021</td>
-        </tr>
-        <tr>
-            <td>University of Calicut</td>
-            <td>Bachelor of Business Administration: Marketing</td>
-            <td>Aug 2020</td>
-        </tr>
-        <br>
-   </table>
-
+        </table>
+    </center>
+    
+    <br>
+    <center>
+        <table border="1", cellspacing="5">
+            <thead>
+                <tr>
+                    <th>Education</th>
+                    <th>University</th>
+                    <th>Year</th>
+                </tr>
+            </thead>
+            <tr>
+                <td>Hult International Business School</td>
+                <td>Master of Science in Data Analytics</td>
+                <td>June 2021</td>
+            </tr>
+            <tr>
+                <td>University of Calicut</td>
+                <td>Bachelor of Business Administration: Marketing</td>
+                <td>Aug 2020</td>
+            </tr>
+            <br>
+       </table>
+    </center>
+  
+    <br>
     <hr>
     
    <table>
@@ -121,6 +134,8 @@
         </tr>
     </table>
 </body>
+
+
 <footer>
     <hr>
     <dl>
