--- a/contact-me.html
+++ b/contact-me.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./src/css/styles.css">
         <title>Contact me</title>
 
         <header>
-            <center>
             <nav>
                 <a href="./index.html">Home</a> |
                 <a href="./webdev.html">Web Dev Projects</a> |
@@ -22,7 +22,6 @@
 
 
     <body>
-        <center>
         <h1>Contact Me</h1>
         <form action="mailto:govindsbhat@outlook.com" method="post" enctype="text/plain">
             <label for="name">Name</label>
