--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">ˀ
+<html lang="en">
+
 <head style="background-color: #6C00FF">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheets" href="./src/stylesheets/style.css">
-    <title>My Website!</title>
-    <header style="color: #ff5a5a">
-        <center>
-        <nav style="color:beige">
-            <a href="./index.html" >Home</a> |
-            <a href="./webdev.html">Web Dev Projects</a> |
-            <a href="./datascience.html">Data Science Projects</a> |
-            <a href="./contact-me.html">Contact Me</a>
-        </nav>
-        </center>
-    <hr>
-    </header>
-</head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheets" href="./src/stylesheets/style.css">
+        <title>My Website!</title>
+        <header style="color: #ff5a5a">
+            <center>
+            <nav style="color:beige">
+                <a href="./index.html" >Home</a> |
+                <a href="./webdev.html">Web Dev Projects</a> |
+                <a href="./datascience.html">Data Science Projects</a> |
+                <a href="./contact-me.html">Contact Me</a>
+            </nav>
+            </center>
+        <hr>
+        </header>
+    </head>
+
 <body style="background-color: #F2F2F2">
     <table cellspacing="20">
         <tr>
@@ -135,7 +137,7 @@
 
 <footer>
     <hr>
-    <dl>
+    <dl>s
         <dd>
             <p>Connect with me on <a href="https://www.linkedin.com/in/govindsbhat/">LinkedIn</a></p>
         </dd>
@@ -196,7 +198,7 @@
 
     <br>
     <hr>
-   <table></table>
+   <table>
         <th>
         <h3>Skills</h3>
         </th>
