--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head style="background-color: #6C00FF">
+    <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheets" href="./src/stylesheets/style.css">
         <title>My Website!</title>
-        <header style="color: #ff5a5a">
+        <header>
             <center>
-            <nav style="color:beige">
+            <nav>
                 <a href="./index.html" >Home</a> |
                 <a href="./webdev.html">Web Dev Projects</a> |
                 <a href="./datascience.html">Data Science Projects</a> |
@@ -20,124 +20,123 @@
         </header>
     </head>
 
-<body style="background-color: #F2F2F2">
-    <table cellspacing="20">
-        <tr>
-            <td>
-                <img src="./src/images/git-GB.png">
-            </td>
-            <td>
-                 <h1>Govind Bhat</h1>
-                <p><strong>Mail:</strong>govindsbhat@outlook.com<a href="govindsbhat@outlook.com"></a> |
-                    <strong>LinkedIn:</strong><a href="https://linkedin.com/in/govindsbhat">@govindsbhat</a></p>
-                    <p>Kochi <strong>|</strong> Calicut <strong>|</strong> Banglore </p>
-                <p><em>Data Science  | Web Development | Digital Marketing </em></p>
-            </td>
-        </tr>
-    </table>
-    <center>
-        <table>
+    <body>
+        <table cellspacing="20">
             <tr>
-                <td></td>
-                <td><p>Hi, I am Govind Bhat. I am a Data Scientist and Web Developer. I am also the founder of Dashrepo. I am passionate about Data Science, Web Development, and Digital Marketing. Just started working with Open Source projects and I love talking about Open Source projects in my Blog. I am also a big fan of Productivity and I love to share my productivity hacks on my blog and newsletter.</p></center>    </td>
-                <td> </td>
+                <td>
+                    <img src="./src/images/git-GB.png">
+                </td>
+                <td>
+                    <h1>Govind Bhat</h1>
+                    <p><strong>Mail:</strong>govindsbhat@outlook.com<a href="govindsbhat@outlook.com"></a> |
+                        <strong>LinkedIn:</strong><a href="https://linkedin.com/in/govindsbhat">@govindsbhat</a></p>
+                        <p>Kochi <strong>|</strong> Calicut <strong>|</strong> Banglore </p>
+                    <p><em>Data Science  | Web Development | Digital Marketing </em></p>
+                </td>
             </tr>
         </table>
-    </center>
-    
-    <br>
-    <center>
-        <table border="1", cellspacing="5">
-            <thead>
+        <center>
+            <table>
                 <tr>
-                    <th>Education</th>
-                    <th>University</th>
-                    <th>Year</th>
+                    <td></td>
+                    <td><p>Hi, I am Govind Bhat. I am a Data Scientist and Web Developer. I am also the founder of Dashrepo. I am passionate about Data Science, Web Development, and Digital Marketing. Just started working with Open Source projects and I love talking about Open Source projects in my Blog. I am also a big fan of Productivity and I love to share my productivity hacks on my blog and newsletter.</p></center>    </td>
+                    <td> </td>
                 </tr>
-            </thead>
-            <tr>
-                <td>Hult International Business School</td>
-                <td>Master of Science in Data Analytics</td>
-                <td>June 2021</td>
-            </tr>
-            <tr>
-                <td>University of Calicut</td>
-                <td>Bachelor of Business Administration: Marketing</td>
-                <td>Aug 2020</td>
-            </tr>
-            <br>
-       </table>
-    </center>
-    <br>
-    <hr>
-   <table>
-        <tr>
-        <h3>Skills</h3>
-        </tr>
-        <td>
-            <table cellspacing="10">
-                <tr>
-                    <td>Data Analysis</td>
-                    <td>⭐⭐⭐⭐⭐</td>
-                </tr>
-
-                    <td>Python</td>
-                    <td>⭐⭐⭐⭐⭐</td>
-                </tr>
-                <tr>
-                    <td>SQL</td>
-                    <td>⭐⭐⭐⭐</td>
-                </tr>
-                <tr>
-                    <td>Tableau</td>
-                    <td>⭐⭐⭐⭐</td>
-                </tr>
-                <tr>
-                    <td>Power BI</td>
-                    <td>⭐⭐⭐⭐⭐</td>
+            </table>
+        </center>
+        <br>
+        <center>
+            <table border="1", cellspacing="5">
+                <thead>
+                    <tr>
+                        <th>Education</th>
+                        <th>University</th>
+                        <th>Year</th>
                     </tr>
+                </thead>
                 <tr>
-                <td>R Programming</td>
-                <td>⭐⭐⭐⭐</td>
+                    <td>Hult International Business School</td>
+                    <td>Master of Science in Data Analytics</td>
+                    <td>June 2021</td>
+                </tr>
+                <tr>
+                    <td>University of Calicut</td>
+                    <td>Bachelor of Business Administration: Marketing</td>
+                    <td>Aug 2020</td>
+                </tr>
+                <br>
+        </table>
+        </center>
+        <br>
+        <hr>
+    <table>
+            <tr>
+            <h3>Skills</h3>
+            </tr>
+            <td>
+                <table cellspacing="10">
+                    <tr>
+                        <td>Data Analysis</td>
+                        <td>⭐⭐⭐⭐⭐</td>
+                    </tr>
 
-            </table>
-        </td>
-        <td>
-            <table cellspacing="10">
-                <tr>
-                    <td>JavaScript</td>
+                        <td>Python</td>
+                        <td>⭐⭐⭐⭐⭐</td>
+                    </tr>
+                    <tr>
+                        <td>SQL</td>
+                        <td>⭐⭐⭐⭐</td>
+                    </tr>
+                    <tr>
+                        <td>Tableau</td>
+                        <td>⭐⭐⭐⭐</td>
+                    </tr>
+                    <tr>
+                        <td>Power BI</td>
+                        <td>⭐⭐⭐⭐⭐</td>
+                        </tr>
+                    <tr>
+                    <td>R Programming</td>
                     <td>⭐⭐⭐⭐</td>
-                </tr>
-                <tr>
-                    <td>React</td>
-                    <td>⭐⭐⭐⭐</td>
-                </tr>
-                <tr>
-                    <td>Node.js</td>
-                    <td>⭐⭐⭐⭐</td>
-                </tr>
-                <tr>
-                    <td>Handlebars</td>
-                    <td>⭐⭐⭐⭐</td>
-                </tr>
-                <tr>
-                    <td>Bootstrap</td>
-                    <td>⭐⭐⭐⭐</td>
-                </tr>
-                <tr>
-                    <td>Git</td>
-                    <td>⭐⭐⭐⭐</td>
-                </tr>
-            </table>
-        </td>
-        </tr>
-    </table>
-</body>
+
+                </table>
+            </td>
+            <td>
+                <table cellspacing="10">
+                    <tr>
+                        <td>JavaScript</td>
+                        <td>⭐⭐⭐⭐</td>
+                    </tr>
+                    <tr>
+                        <td>React</td>
+                        <td>⭐⭐⭐⭐</td>
+                    </tr>
+                    <tr>
+                        <td>Node.js</td>
+                        <td>⭐⭐⭐⭐</td>
+                    </tr>
+                    <tr>
+                        <td>Handlebars</td>
+                        <td>⭐⭐⭐⭐</td>
+                    </tr>
+                    <tr>
+                        <td>Bootstrap</td>
+                        <td>⭐⭐⭐⭐</td>
+                    </tr>
+                    <tr>
+                        <td>Git</td>
+                        <td>⭐⭐⭐⭐</td>
+                    </tr>
+                </table>
+            </td>
+            </tr>
+        </table>
+    </body>
 
 
 <footer>
     <hr>
-    <dl>s
+    <dl
         <dd>
             <p>Connect with me on <a href="https://www.linkedin.com/in/govindsbhat/">LinkedIn</a></p>
         </dd>
