--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheets" href="./src/stylesheets/style.css">
+        <link rel="stylesheets" href="./src/css/styles.css">
         <title>My Website!</title>
         <header>
             <center>
@@ -24,11 +24,11 @@
         <table cellspacing="20">
             <tr>
                 <td>
-                    <img src="./src/images/git-GB.png">
+                    <img src="./src/images/git-GB.png" alt = "Profile bit image">
                 </td>
                 <td>
                     <h1>Govind Bhat</h1>
-                    <p><strong>Mail:</strong>govindsbhat@outlook.com<a href="govindsbhat@outlook.com"></a> |
+                    <p><strong>Mail:</strong>govindsbhat@outlook.com<a href="govindsbhat@outlook.com"></a></p>
                         <strong>LinkedIn:</strong><a href="https://linkedin.com/in/govindsbhat">@govindsbhat</a></p>
                         <p>Kochi <strong>|</strong> Calicut <strong>|</strong> Banglore </p>
                     <p><em>Data Science  | Web Development | Digital Marketing </em></p>
@@ -136,7 +136,7 @@
 
 <footer>
     <hr>
-    <dl
+    <dl>
         <dd>
             <p>Connect with me on <a href="https://www.linkedin.com/in/govindsbhat/">LinkedIn</a></p>
         </dd>
